--- a/RandomColorGenerator/RandomColorGenerator/Info.plist
+++ b/RandomColorGenerator/RandomColorGenerator/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Hex Color Generator</string>
+	<string>HexColor</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
